# swift-corelibs-libdispatch

./: configure.ac
dispatch/: Makefile.am  module.map.in  module.modulemap  object.h
man/: Makefile.am
os/: Makefile.am  object.h
src/: .gitignore  Makefile.am  source.c
src/Dispatch/: module.map  module.map.in
src/event/: event_epoll.c
src/swift/: Block.swift  Data.swift  Dispatch.apinotes  Dispatch.swift  DispatchStubs.cc  IO.swift  Private.swift  Queue.swift  Source.swift  Time.swift  Wrapper.swift  swift_wrappers.c
swift/: buildIt.sh
swift/Dispatch/: Dispatch.c  Dispatch.swift  module.map
swift/samples/: average.swift
tests/: Makefile.am
